--- a/src/app/landing-page/header/header.component.html
+++ b/src/app/landing-page/header/header.component.html
@@ -9,10 +9,10 @@
         </div>
         <img src="assets/menu.svg" alt="Menu Icon" class="h-5 w-5 md:hidden" />
         <nav class="hidden md:flex gap-6 text-white/70 items-center">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Services</a>
-          <a href="#">Contact</a>
+          <a routerLink="home">Home</a>
+          <a routerLink="about">About</a>
+          <a routerLink="services">Services</a>
+          <a routerLink="contact">Contact</a>
           <button
             class="bg-red-600 hover:bg-red-400 text-white px-4 py-2 rounded-lg font-medium inline-flex align-items justify-center tracking-tight">
             Login
