--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,13 +1,3 @@
 <app-header></app-header>
-<!-- <app-about></app-about> -->
-<!-- <app-hero></app-hero>
-<app-fitness></app-fitness>
-<app-programs></app-programs>
-<app-best-trainer></app-best-trainer>
-<app-club-cards></app-club-cards>
-<app-training-schedule></app-training-schedule>
-<app-slider></app-slider> -->
-<app-services></app-services>
-<!-- <app-contact></app-contact> -->
-<app-testimonials></app-testimonials>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
