--- a/src/app/UI/clients/client-coatch/client-coatch.component.html
+++ b/src/app/UI/clients/client-coatch/client-coatch.component.html
@@ -27,25 +27,36 @@
               Email</th>
             <th class="px-6 py-3 text-sm font-medium text-white dark:text-gray-300 uppercase tracking-wider">
               Phone</th>
+              <th class="px-6 py-3 text-sm font-medium text-white dark:text-gray-300 uppercase tracking-wider">
+                Pack</th>
+              <th class="px-6 py-3 text-sm font-medium text-white dark:text-gray-300 uppercase tracking-wider">
+                Date debut</th>
+                <th class="px-6 py-3 text-sm font-medium text-white dark:text-gray-300 uppercase tracking-wider">
+                  date fin</th>
             <th class="px-6 py-3 text-sm font-medium text-white dark:text-gray-300 uppercase tracking-wider">
               Actions</th>
           </tr>
         </thead>
         <tbody class="bg-white dark:bg-gray-800 divide-y divide-gray-200 dark:divide-gray-700">
-          <tr *ngFor="let customer of customers | paginate: { itemsPerPage: itemsPerPage, currentPage: p }"
+          <tr *ngFor="let customer of recuperCustomer | paginate: { itemsPerPage: itemsPerPage, currentPage: p }"
             class="hover:bg-gray-50 dark:hover:bg-gray-700 text-center transition-colors duration-150">
             <td class="p-3 flex justify-center">
-              <img [src]="customer.image" alt="user" class="w-12 h-12 rounded-full object-cover">
+              <img *ngIf="customer.profileImage" [src]="imageBaseUrl + '/' + customer.profileImage" alt="{{ customer.userName }}" class="w-12 h-12 rounded-full object-cover">
             </td>
-            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.name }} </td>
+            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.userName }} </td>
             <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.email }}</td>
-            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.phone }}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.telephone }}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.pack }}</td>
+
+            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.dateDebut }}</td>
+            <td class="px-6 py-4 whitespace-nowrap text-base text-gray-900 dark:text-gray-200">{{ customer.dateFin }}</td>
             <td class="p-3 flex gap-2 justify-center">
-              <button routerLink="update"
+              <button [routerLink]="['update', customer.id]"
                 class="text-green-600 hover:bg-green-200 p-2 rounded-lg border dark:border-slate-600">
                 <i class="ph ph-pencil-simple text-xl"></i>
               </button>
-              <!-- <button class="text-red-700 hover:bg-red-200 p-2 rounded-lg border dark:border-slate-600">
+              <!-- <button (click)="deleteCustomer(customer.id)"
+              class="text-red-700 hover:bg-red-200 p-2 rounded-lg border dark:border-slate-600">
                 <i class="ph ph-trash text-xl"></i>
               </button> -->
             </td>
