--- a/src/app/admin-template/body/body.component.html
+++ b/src/app/admin-template/body/body.component.html
@@ -1,29 +1,36 @@
-<!-- body.component.html -->
-<div class="body bg-white dark:bg-[#222b45]" [ngClass]="{'body-trimmed': isSidebarActive, 'body-md-screen': !isSidebarActive}">
-  <!-- Left Section: Breadcrumb -->
+<div class="body bg-white dark:bg-[#222b45]"
+  [ngClass]="{'body-trimmed': isSidebarActive, 'body-md-screen': !isSidebarActive}">
+
   <div class="header-left">
-      <nav class="flex bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 border border-gray-200 dark:border-gray-600 py-2 px-5 rounded-lg" aria-label="Breadcrumb">
-          <ol class="inline-flex items-center space-x-1 md:space-x-3">
-              <li class="inline-flex items-center">
-                  <a href="#" class="text-sm text-gray-700 dark:text-gray-200 hover:text-blue-300 inline-flex items-center">
-                      <i class="ph ph-house-line text-gray-700 dark:text-gray-200"></i>
-                      <span class="ml-2 font-medium">Home</span>
-                  </a>
-              </li>
-              <li>
-                  <div class="flex items-center">
-                      <i class="ph ph-caret-right text-[#052659] dark:text-gray-200 text-[20px]"></i>
-                      <a href="#" class="text-gray-700 dark:text-gray-200 hover:hover:text-blue-300 ml-1 md:ml-2 text-sm font-medium">Dashboards</a>
-                  </div>
-              </li>
-              <li aria-current="page">
-                  <div class="flex items-center">
-                      <i class="ph ph-caret-right text-[#052659] dark:text-gray-200 text-[20px]"></i>
-                      <span class="text-gray-400 dark:text-gray-400 ml-1 md:ml-2 text-sm font-medium">Default</span>
-                  </div>
-              </li>
-          </ol>
-      </nav>
+    <nav
+      class="flex bg-white dark:bg-gray-800 text-gray-700 dark:text-gray-200 border border-gray-200 dark:border-gray-600 py-2 px-5 rounded-lg"
+      aria-label="Breadcrumb">
+      <ol class="inline-flex items-center space-x-1 md:space-x-3">
+        <li class="inline-flex items-center">
+          <a routerLink="/admin/dashboard"
+            class="text-sm text-gray-700 dark:text-gray-200 hover:text-blue-300 inline-flex items-center">
+            <i class="ph ph-house-line text-gray-700 dark:text-gray-200"></i>
+            <span class="ml-2 font-medium">Home</span>
+          </a>
+        </li>
+
+        <ng-container *ngFor="let breadcrumb of breadcrumbs; let last = last">
+          <li>
+            <div class="flex items-center">
+              <i class="ph ph-caret-right text-[#052659] dark:text-gray-200 text-[20px]"></i>
+              <a *ngIf="!last" [routerLink]="breadcrumb.url"
+                class="text-gray-700 dark:text-gray-200 hover:text-blue-300 ml-1 md:ml-2 text-sm font-medium">
+                {{ breadcrumb.label }}
+              </a>
+              <span *ngIf="last" class="text-gray-400 dark:text-gray-400 ml-1 md:ml-2 text-sm font-medium">
+                {{ breadcrumb.label }}
+              </span>
+            </div>
+          </li>
+        </ng-container>
+      </ol>
+    </nav>
   </div>
+
   <router-outlet></router-outlet>
 </div>
